fix: minor bug fixes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rn-multipicker",
   "version": "0.2.2",
+  "private": "true",
   "description": "This package will provide features to select and search multiple dropdown items gracefully",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
